Implement hybrid WiFi Hotspot management (Root/Proxy) with data/speed limits and device blocking.